<resources>
    <string name="app_name">meau</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nome_do_usu_rio">Nome do Usuário</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirm_senha">Confirmação de senha</string>
    <string name="n_mero_de_telefone">Número de Telefone</string>
    <string name="address">Endereço</string>
    <string name="cadastar">Fazer Cadastro</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="idade">Idade</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Registrar</string>
    <string name="SignInGoogle">Entrar com Google</string>
    <string name="SignInFacebook">Entrar com Facebook</string>


    <!--string related to main fragment-->
    <string name="Ola">Olá!</string>
    <string name="BemVindo">Bem vindo ao Meau!\nAqui você pode adotar, doar e ajudar\ncães e gatos com facilidade.\nQual o seu interesse?</string>
    <string name="ButtonAdotar">Adotar</string>
    <string name="ButtonAjudar">Ajudar</string>
    <string name="ButtonCadastrarAnimal">Cadastrar Animal</string>
    <string name="login">Login</string>

    <!--strings related to register user-->
    <string name="RegisterInfo">As informações preenchidas serão divulgadas apenas para a pessoa com a qual você realizar o processo de adoção e/ou apadrinhamento, após a formalização do processo.</string>
    <string name="RegisterInfoPessoais">INFORMAÇÕES PESSOAIS</string>
    <string name="RegisterInfoPerfil">INFORMAÇÕES DE PERFIL</string>

    <!--strings related to not login-->
    <string name="Ops">Ops!</string>
    <string name="CadastroNecessario">Ops necessário estar cadastrado, por favor faça o login</string>


    <!--string legislacao-->
    <string name="Art4">Art. 4º É permitida a realização de eventos de doação de cães e gatos em estabelecimentos devidamente legalizados.\n§ 1º A feira só poderá ser realizada sob a responsabilidade de pessoa física ou jurídica, de direito público ou privado, sem fins lucrativos mantenedoras ou responsáveis por cães e gatos.\n§ 2º Para identificação da entidade, associação, instituição ou pessoa promotora do evento é necessário a existência de uma placa, em local visível, no espaço de realização do evento de doação, contendo: nome do promotor, seja pessoa física ou jurídica, CPF ou CNPJ, com respectivo telefone.\n§ 3º Pet shops ou clínicas veterinárias podem promover doações de animais, desde que haja identificação do responsável pela atividade, no local de exposição dos animais, atendendo-se às exigências previstas no parágrafo anterior.\n§ 4º Os animais expostos para doação devem estar devidamente esterilizados e submetidos a controle de endo e ectoparasitas, bem como submetidos ao esquema de vacinação contra a raiva e doenças espécie-específicas, conforme respectiva faixa etária, mediante atestados.</string>
    <string name="Art5">Art. 5º As doações serão regidas por contrato específico, cujas obrigações previstas, por escrito, devem contemplar os dados qualificativos do animal, do adotante e do doador, as responsabilidades do adotante, as penalidades no caso de descumprimento, a permissão de monitoramento pelo doador e as condições de bem-estar e manutenção do animal.\nParágrafo único. Antes da consumação da doação e da assinatura do contrato, o potencial adotante deve ser amplamente informado e conscientizado sobre a convivência da família com um animal, noções de comportamento, expectativa de vida, provável porte do animal na fase adulta (no caso de filhotes), necessidades nutricionais e de saúde.</string>
    <string name="Art6">Art. 6º No ato da doação deve ser providenciado o RGA do animal, em nome do novo proprietário.</string>
    <string name="Art7">Art. 7º Aqueles elencados no § 1º do art. 4º podem cobrar taxa de adoção do animal, devendo para tanto fornecer ao adotante recibo especificando o valor da taxa e demais gastos.</string>
    <string name="Lei">Lei no 14.483, de 16 de julho de 2007</string>

    <!--strings de cadastro animal-->
    <string name="CadastrarPara">Tenho interesse em cadastrar o animal para:</string>
    <string name="ButtonAdocao">Adoção</string>
    <string name="ButtonApadrinhar">Apadrinhar</string>
    <string name="NomeAnimal">NOME DO ANIMAL</string>
    <string name="Adocao">ADOÇÃO</string>
    <string name="Especie">ESPÉCIE</string>
    <string name="Sexo">SEXO</string>
    <string name="Porte">PORTE</string>
    <string name="FotoAnimal">FOTOS DO ANIMAL</string>
    <string name="Idade">IDADE</string>
    <string name="Temperamento">TEMPERAMENTO</string>
    <string name="ExigenciasAdocao">EXIGÊNCIAS PARA ADOÇÃO</string>
    <string name="SobreAnimal">SOBRE O ANIMAL</string>
    <string name="Cachorro">Cachorro</string>
    <string name="Gato">Gato</string>
    <string name="Macho">Macho</string>
    <string name="Femea">Fêmea</string>
    <string name="Pequeno">Pequeno</string>
    <string name="Medio">Médio</string>
    <string name="Grande">Grande</string>
    <string name="Filhote">Filhote</string>
    <string name="Adulto">Adulto</string>
    <string name="Idoso">Idoso</string>
    <string name="Brincalhao">Brincalhão</string>
    <string name="Timido">Tímido</string>
    <string name="Calmo">Calmo</string>
    <string name="Guarda">Guarda</string>
    <string name="Amoroso">Amoroso</string>
    <string name="Preguicoso">Preguiçoso</string>
    <string name="Vacinado">Vacinado</string>
    <string name="Vermifugado">Vermifugado</string>
    <string name="Castrado">Castrado</string>
    <string name="Doente">Doente</string>


    <!--strings de termo de adocao-->
    <string name="TextTermo">O termo de adoção é um termo que oficializa o processo de adoção de um animal. Similarmente funciona o termo de apadrinhamento.\n\nÉ importante que o doador/dono exija a assinatura deste termo por parte do adotante/padrinho, de forma a ter prova legal de que a pessoa adquiriu o animal. Assim, podem ser tomadas providências legais em caso de maus tratos ou negligência ao animal.\n\nPara facilitar o processo, o Meau disponibiliza o termo aos seus doadores e donos de animais que utilizam o aplicativo para encontrar um destino e/ou ajuda para seu bichinho. Este termo é enviado por e-mail para que possa ser feita a impressão e, no momento de entrega do animal (ou quando o padrinho vai conhecê-lo), seja feita a assinatura por parte do adotante/padrinho.\n\nPressionando os botões abaixo, você receberá em seu email o termo em questão, nos formatos .doc (word) e .pdf.</string>
    <string name="ButtonTermoAdocao">Termo de adoção</string>
    <string name="ButtonTermoApadrinhamento">Termo de apadrinhamento</string>
    <string name="SendTermEnviado">Enviado</string>
    <string name="SendTermPart1">O termo já foi enviado para o seu email.\nCaso não tenha recebido, verifique se o seu email está cadastrado corretamente na área “meu perfil”, no menu principal.</string>
    <string name="SendTermPart2"> Para entender um pouco mais sobre as leis que envolvem esse processo, acesse nossa área de legislação!</string>
    <string name="Legislacao">Legislação</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--string de dicas-->
    <string name="Comportamento">Comportamento</string>
    <string name="Saude">Saude</string>
    <string name="Alimentacao">Alimentação</string>

    <!--string de perfil-->
    <string name="nome">NOME COMPLETO</string>
    <string name="idadeP">IDADE</string>
    <string name="emailP">EMAIL</string>
    <string name="localizacao">LOCALIZAÇÃO</string>
    <string name="endereco">ENDEREÇO</string>
    <string name="telefone">TELEFONE</string>
    <string name="nome_usuario">NOME DE USUÁRIO</string>
    <string name="historico">HISTÓRICO</string>


    <!--string de detalhes pet-->
    <string name="sexoDetalhes">SEXO</string>
    <string name="porteDetalhes">PORTE</string>
    <string name="idadeDetalhes">IDADE</string>
    <string name="localizacaoDetalhes">LOCALIZAÇÃO</string>
    <string name="castradoDetalhes">CASTRADO</string>
    <string name="vermifugadoDetalhes">VERMIFUGADO</string>
    <string name="vacinadoDetalhes">VACINADO</string>
    <string name="doencaDetalhes">DOENÇAS</string>
    <string name="temperamentoDetalhes">TEMPERAMENTO</string>
    <string name="exigenciasDetalhes">EXIGENCIAS DO DOADOR</string>
    <string name="maisDetalhes">MAIS SOBRE</string>
    <string name="botaoDetalhes">PRETENDE</string>








</resources>
