<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Adocao"
            android:textSize="16dp"
            android:textColor="@color/TextColorLei"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/NomeAnimal"
            android:textColor="@color/TextYellow"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/nomedoanimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NomeAnimal"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FotoAnimal"
            android:textColor="@color/TextYellow"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Especie"
            android:textColor="@color/TextYellow"
            android:textSize="12dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cachorro"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gato"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sexo"
            android:textColor="@color/TextYellow"
            android:textSize="12dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Macho"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Femea"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Porte"
            android:textColor="@color/TextYellow"
            android:textSize="12dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pequno"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medio"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Grande"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Idade"
            android:textColor="@color/TextYellow"
            android:textSize="12dp"/>


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Filhote"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Adulto"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Idoso"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Temperamento"
            android:textColor="@color/TextYellow"
            android:textSize="12dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:text="@string/Brincalhao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>

            <CheckBox
                android:text="@string/Timido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>

            <CheckBox
                android:text="@string/Calmo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:text="@string/Guarda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>

            <CheckBox
                android:text="@string/Amoroso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>

            <CheckBox
                android:text="@string/Preguicoso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Saude"
            android:textColor="@color/TextYellow"
            android:textSize="12dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:text="@string/Vacinado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>

            <CheckBox
                android:text="@string/Vermifugado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:text="@string/Castrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>

            <CheckBox
                android:text="@string/Doente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>


        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Doenças"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ExigenciasAdocao"
            android:textColor="@color/TextYellow"
            android:textSize="12dp"/>

        <CheckBox
            android:text="Termo de adoção"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </CheckBox>
        <CheckBox
            android:text="Fotos da casa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </CheckBox>
        <CheckBox
            android:text="Visita prévia ao animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </CheckBox>
        <CheckBox
            android:text="Acompanhamento pós adoção"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SobreAnimal"
            android:textColor="@color/TextYellow"
            android:textSize="12dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Compartilhe a historia"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="232dp"
            android:layout_height="40dp"
            />
    </LinearLayout>

</FrameLayout>