<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.jadilindo.meau.meau.Home">


        <TextView
            android:id="@+id/ola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="72dp"
            android:text="@string/Ola"
            android:fontFamily="@font/courgette_regular"
            android:textColor="@color/TextColorYellowTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="30dp"
            android:paddingBottom="0dp"
            />

        <TextView
            android:id= "@+id/bemVindo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BemVindo"
            android:layout_centerHorizontal="true"
            android:textColor="@color/TextColor"
            android:layout_below="@+id/ola"
            android:layout_marginRight="48dp"
            android:textSize="14dp"
            android:gravity="center"
            />

        <LinearLayout
            android:id="@+id/LinearLayoutButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bemVindo"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            >

            <Button
                android:id="@+id/buttonAdotar"
                android:layout_width="232dp"
                android:layout_height="40dp"
                android:layout_below="@+id/bemVindo"
                android:layout_centerHorizontal="true"
                android:text="@string/ButtonAdotar"
                android:layout_marginBottom="6dp"
                android:background="@color/BackColorYellowButton"
                android:textColor="@color/TextColorYellowButton"/>

            <Button
                android:id="@+id/buttonAjudar"
                android:layout_width="232dp"
                android:layout_height="40dp"
                android:text="@string/ButtonAjudar"
                android:layout_marginBottom="6dp"
                android:background="@color/BackColorYellowButton"
                android:textColor="@color/TextColorYellowButton"/>

            <Button
                android:id="@+id/buttonCadastrar"
                android:layout_width="232dp"
                android:layout_height="40dp"
                android:text="@string/ButtonCadastrarAnimal"
                android:layout_marginBottom="12dp"
                android:background="@color/BackColorYellowButton"
                android:textColor="@color/TextColorYellowButton"/>



        </LinearLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@id/LinearLayoutButton1"
            android:textColor="@color/TextColorLoginButton"
            android:textSize="16dp"
            android:layout_marginBottom="12dp"
            android:onClick="goToRegister"/>

        <ImageView
            android:layout_width="122dp"
            android:layout_height="44dp"
            android:src="@drawable/meau_marca_2"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
    </ScrollView>
</FrameLayout>