<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CadastrarPara"
                android:textSize="14dp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/button_adocao"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@color/UnselectButton"
                    android:layout_marginRight="8dp"
                    android:text="@string/ButtonAdocao"
                    android:onClick="startRegisterAnimalForm"/>
                <Button
                    android:id="@+id/button_apadrinhar"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@color/UnselectButton"
                    android:layout_marginRight="8dp"
                    android:text="@string/ButtonApadrinhar"
                    android:onClick="startRegisterAnimalForm"/>
                <Button
                    android:id="@+id/button_ajudar"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@color/UnselectButton"
                    android:text="@string/ButtonAjudar"
                    android:onClick="startRegisterAnimalForm"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/cadastrar_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!--fragmento depende do button selecionado-->

            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>